--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <script src="js/index.js"></script>
   <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="shortcut icon" type="image/x-icon" href="images/logo.png"/>
+  
+  <!-- <link rel="shortcut icon" type="image/x-icon" href="images/logo.png"/> -->
 </head>
 <body>
 
