--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/styles.css">
   
-  <!-- <link rel="shortcut icon" type="image/x-icon" href="images/logo.png"/> -->
+  <link rel="shortcut icon" type="image/x-icon" href="images/logo.png"/> 
 </head>
 <body>
 
