--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div class="content-wrap">
     <h1>About me</h1>
 
-    <p>My name is Judith Yeo</p>
+    <p>POOOP</p>
 
     <img class="profile" src="images/profile.jpg" alt"">
 
