Testing responsive js, updating index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script src="js/index.js"></script>
 
   <!-- Link to Restive.JS -->
-  <script type="text/javascript" src="restive.min.js"></script>
+  <script type="text/javascript" src="js/restive.min.js"></script>
 
   <script type="text/javascript">
     $( document ).ready(function() {
