--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <!-- Link to Restive.JS -->
   <script type="text/javascript" src="js/restive.min.js"></script>
 
-  <script type="text/javascript">
+  <!-- Initialize Plugin -->
+  <script>
     $( document ).ready(function() {
       $('body').restive({
         breakpoints: ['240', '320', '480', '640', '720', '960', '1280'],
