--- a/index.html
+++ b/index.html
@@ -55,12 +55,15 @@
 
     <img class="profile" src="images/profile.jpg" alt"">
 
-    <p><a href="http://imgur.com" target="_blank">Imgur</a> Toffee muffin cotton candy souffl jelly danish topping halvah. <a href="http://facebook.com" target="_blank">Facebook</a> Hello world!!!! asdfasdf Hi changes changes hcasdf awer 
+    <p>I’m a 3rd year student at the <a href="http://ubc.ca" target="_blank">University of British Columbia</a>, currently enrolled in the <a href="http://www.sauder.ubc.ca/Programs/Bachelor_of_Commerce/Program_Overview/Combined_Major_in_Business_and_Computer_Science" target="_blank">Combined Major in Business and Computer Science </a> programme. 
+
     </p>
 
-    <p>Cheesecake brownie cotton candy jelly liquorice jujubes lollipop. Pie jelly drag marshmallow sweet roll cake sugar plum cheesecake sweet. Oat cake cake sweet powder.Cheesecake brownie cotton candy jelly liquorice jujubes lollipop. Pie jelly drag marshmallow sweet roll cCheesecake brownie cotton candy jelly liquorice jujubes lollipop. Pie jelly drag marshmallow sweet roll cCheesecake brownie cotton candy jelly liquorice jujubes lollipop. Pie jelly drag marshmallow sweet roll c</p>
+    <p>Besides being a student, I work hard to balance an active lifestyle. I an avid Ultimate Frisbee player and I’ve played on provincial, national, and collegiate teams. I currently play on the UBC Women’s Ultimate Team. Last spring, I competed with the team on various tournaments over the weekends in Canada and the US and placed third at the USAU College Nationals in Wisconsin, Milwaukee. </p>
 
-    <p>Cheesecake brownie cotton candy jelly liquorice jujubes lollipop. Pie jelly drag marshmallow sweet roll cake sugar plum cheesecake sweet. Oat cake cake sweet powder.Cheesecake brownie cotton candy jelly liquorice jujubes lollipop. Pie jelly drag marshmallow sweet roll cCheesecake brownie cotton candy jelly liquorice jujubes lollipop. Pie jelly drag marshmallow sweet roll cCheesecake brownie cotton candy jelly liquorice jujubes lollipop. Pie jelly drag marshmallow sweet roll c</p>
+    <p>As well, I love coaching my alma matter. I have been the assistant coach to the Point Grey ultimate team for the past two years and will be returning in the spring of 2016. Giving back to the community that has given me so many opportunities is very important to me. I love inspiring and helping kids grow and learn about the sport.</p>
+
+    <p>But besides sports, I do of course enjoying coding. I love attending workshops and hackathons to learn new languages and meet fellow coders! The most recent hackathon was the 2015 Vancity Startup Hackathon where my fellow teammates and I created a prototype location based, chat Android application in under 24 hours.</p>
   </div>
 </section>
 
