--- a/index.html
+++ b/index.html
@@ -51,19 +51,16 @@
   <div class="content-wrap">
     <h1>About me</h1>
 
-    <p>POOOP</p>
-
     <img class="profile" src="images/profile.jpg" alt"">
 
-    <p>I’m a 3rd year student at the <a href="http://ubc.ca" target="_blank">University of British Columbia</a>, currently enrolled in the <a href="http://www.sauder.ubc.ca/Programs/Bachelor_of_Commerce/Program_Overview/Combined_Major_in_Business_and_Computer_Science" target="_blank">Combined Major in Business and Computer Science </a> programme. 
+    <p>I am a 3rd year student at the <a href="http://ubc.ca" target="_blank">University of British Columbia</a>, currently enrolled in the <a href="http://www.sauder.ubc.ca/Programs/Bachelor_of_Commerce/Program_Overview/Combined_Major_in_Business_and_Computer_Science" target="_blank">Combined Major in Business and Computer Science </a> programme. </p>
 
-    </p>
+    <p>Besides being a student, I work hard to balance an active lifestyle. I am an avid Ultimate Frisbee player and I have played on provincial, national, and collegiate teams. I currently play for the UBC Women’s Ultimate Team. Last spring, I competed with the team at various weekend tournaments in Canada and the US, placing third at the USAU College Nationals in Wisconsin, Milwaukee. </p>
 
-    <p>Besides being a student, I work hard to balance an active lifestyle. I an avid Ultimate Frisbee player and I’ve played on provincial, national, and collegiate teams. I currently play on the UBC Women’s Ultimate Team. Last spring, I competed with the team on various tournaments over the weekends in Canada and the US and placed third at the USAU College Nationals in Wisconsin, Milwaukee. </p>
+    <p>I also love coaching my alma matter. I have been the assistant coach to the Point Grey ultimate team for the past two years and will be returning in the spring of 2016. Giving back to the community that has given me so many opportunities is very important to me. I love inspiring and helping kids grow and learn about the sport.</p>
 
-    <p>As well, I love coaching my alma matter. I have been the assistant coach to the Point Grey ultimate team for the past two years and will be returning in the spring of 2016. Giving back to the community that has given me so many opportunities is very important to me. I love inspiring and helping kids grow and learn about the sport.</p>
+    <p>But besides sports, I do of course enjoying coding. I love attending workshops and hackathons to learn new languages and meet fellow coders! The most recent hackathon was the 2015 Vancity Startup Hackathon where my fellow teammates and I created a prototype location based, chat Android application in under 24 hours. </p>
 
-    <p>But besides sports, I do of course enjoying coding. I love attending workshops and hackathons to learn new languages and meet fellow coders! The most recent hackathon was the 2015 Vancity Startup Hackathon where my fellow teammates and I created a prototype location based, chat Android application in under 24 hours.</p>
   </div>
 </section>
 
