--- a/index.html
+++ b/index.html
@@ -53,13 +53,15 @@
 
     <img class="profile" src="images/profile.jpg" alt"">
 
-    <p>I am a 3rd year student at the <a href="http://ubc.ca" target="_blank">University of British Columbia</a>, currently enrolled in the <a href="http://www.sauder.ubc.ca/Programs/Bachelor_of_Commerce/Program_Overview/Combined_Major_in_Business_and_Computer_Science" target="_blank">Combined Major in Business and Computer Science </a> programme. </p>
+    <p>I am a 3rd year student at the <a href="http://ubc.ca" target="_blank">University of British Columbia</a>, currently enrolled in the <a href="http://www.sauder.ubc.ca/Programs/Bachelor_of_Commerce/Program_Overview/Combined_Major_in_Business_and_Computer_Science" target="_blank">Combined Major in Business and Computer Science </a> programme. As well, I am in the Computer Science Co-op Progamme.</p>
 
     <p>Besides being a student, I work hard to balance an active lifestyle. I am an avid Ultimate Frisbee player and I have played on provincial, national, and collegiate teams. I currently play for the UBC Women’s Ultimate Team. Last spring, I competed with the team at various weekend tournaments in Canada and the US, placing third at the USAU College Nationals in Wisconsin, Milwaukee. </p>
 
     <p>I also love coaching my alma matter. I have been the assistant coach to the Point Grey ultimate team for the past two years and will be returning in the spring of 2016. Giving back to the community that has given me so many opportunities is very important to me. I love inspiring and helping kids grow and learn about the sport.</p>
 
     <p>But besides sports, I do of course enjoying coding. I love attending workshops and hackathons to learn new languages and meet fellow coders! The most recent hackathon was the 2015 Vancity Startup Hackathon where my fellow teammates and I created a prototype location based, chat Android application in under 24 hours. </p>
+
+    <p>My other hobbies include drinking coffee, hiking, and critiquing movies. In the summer of 2014, I travelled to various cities in Italy and fell in love with not only the beautiful landmarks but also Italian coffee! As well, Vancouver has great hiking spots. I took the photo above on a hike on Cypress Mountain, where my friends and I hiked to Mystery Lake. I am also a movie buff and my favourite movies include <i>The Departed</i>, <i>Layer Cake</i>, and <i>The Matrix.</i></p>
 
   </div>
 </section>
@@ -72,7 +74,7 @@
 
 <footer id="contact">
   <div class="content-wrap">
-    <h1>Holla!</h1>
+    <h1>Hi!</h1>
     <p>Want to say hi? Email me at <a href="mailto:judithyeo@gmail.com">judithyeo@gmail.com</a></p>
 
     <!-- Horizontal icons example -->
