--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="content-wrap">
     <h1>About me</h1>
 
-    <img class="profile" src="images/profile.jpg" alt"">
+    <img class="profile" src="images/linkedin2.jpg" alt"">
 
     <p>I am a 3rd year student at the <a href="http://ubc.ca" target="_blank">University of British Columbia</a>, currently enrolled in the <a href="http://www.sauder.ubc.ca/Programs/Bachelor_of_Commerce/Program_Overview/Combined_Major_in_Business_and_Computer_Science" target="_blank">Combined Major in Business and Computer Science </a> programme. As well, I am in the Computer Science Co-op Programme.</p>
 
