--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <p>I am a 3rd year student at the <a href="http://ubc.ca" target="_blank">University of British Columbia</a>, currently enrolled in the <a href="http://www.sauder.ubc.ca/Programs/Bachelor_of_Commerce/Program_Overview/Combined_Major_in_Business_and_Computer_Science" target="_blank">Combined Major in Business and Computer Science </a> programme. As well, I am in the Computer Science Co-op Programme.</p>
 
-    <p>Besides being a student, I work hard to balance an active lifestyle. I am an avid Ultimate Frisbee player and I have played on provincial, national, and collegiate teams. I currently play for the UBC Women’s Ultimate Team. Last spring, I competed with the team at various weekend tournaments in Canada and the US, placing third at the USAU College Nationals in Wisconsin, Milwaukee. </p>
+    <p>Besides being a student, I work hard to balance an active lifestyle. I am an avid Ultimate Frisbee player and I have played on provincial, national, and collegiate teams. I currently play for the UBC Women's Ultimate Team. Last spring, I competed with the team at various weekend tournaments in Canada and the US, placing third at the USAU College Nationals in Wisconsin, Milwaukee. </p>
 
     <p>I also love coaching my alma matter. I have been the assistant coach to the Point Grey ultimate team for the past two years and will be returning in the spring of 2016. Giving back to the community that has given me so many opportunities is very important to me. I love inspiring and helping kids grow and learn about the sport.</p>
 
