--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <a class="logo" href="#home">JY</a>
   <a href="#home">Home</a>
   <a href="#about">About</a>
-  <a href="pdf/JudithYeoResume.pdf" target="_blank">Resume</a>
+  <a href="JudithYeoResume.pdf" target="_blank">Resume</a>
   <a href="#contact">Contact</a>
 </nav>
 
